# libsbp

./: .bazelignore  .bazeliskrc  .bazelrc  .clang-format  .clang-tidy  .dockerignore  .flake8  .gitattributes  .gitignore  .gitmodules  .travis.yml  BUILD.bazel  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile-build  HOWTO.md  LICENSE  MODULE.bazel  Makefile  OWNERS.md  README.md  RELEASE_NOTES.md  VERSIONING.md  WORKSPACE  WORKSPACE.bazel  ci-build.sh  codecov.yml  default.nix  do-release.sh  gen_sbp_binary.sh  index.html  libsbp.code-workspace  package-lock.json  package.json  params.json  pre-piksi-multi-launch-updates.md  pyproject.toml  release.toml  requirements.txt  (+4 more)
c/: .clang-format  .clang-tidy  .gitignore  BUILD  BUILD.bazel  CMakeLists.txt  Makefile  README.md  build-error.c  ci-build.sh
c/cmake/: DoubleIncludeGuard.cmake  FindCheck.cmake  Findgnss-converters.cmake  Findgtest.cmake  Findrtcm.cmake  Findsbp.cmake  Findsettings.cmake  Findswiftnav.cmake  README.md  SwiftUtils.cmake  Toolchain-gcc-arm-embedded.cmake  VersionFromGit.cmake  update_common_modules.sh
c/docs/: CMakeLists.txt  Doxyfile.in  install.dox  main.dox
c/example/: Makefile  README.md  example.c  sbp2json_main.c
c/example/cpp_example/: CMakeLists.txt  README.md  cpp_example.cc
c/example/tcp_2sigma_example/: CMakeLists.txt  tcp_2sigma_example.cc
c/example/tcp_example/: README.md  tcp_example.c
c/examples/: CMakeLists.txt
c/examples/cpp_example/: CMakeLists.txt  cpp_example.cc
c/examples/example/: CMakeLists.txt  README.md  example.c
c/examples/legacy/: CMakeLists.txt
c/examples/libsbp/: CMakeLists.txt
c/examples/tcp_2sigma_example/: CMakeLists.txt  tcp_2sigma_example.cc
c/examples/tcp_example/: CMakeLists.txt  README.md  tcp_example.c
c/examples/v4/: CMakeLists.txt
c/include/libsbp/: acquisition.h  acquisition_macros.h  bootload.h  bootload_macros.h  can.h  common.h  constants.h  deprecated.h  edc.h  ephemeris.h  ext_events.h  ext_events_macros.h  file_io.h  file_io_macros.h  flash.h  flash_macros.h  gnss.h  gnss_macros.h  gnss_signal.h  gpstime.h  imu.h  imu_macros.h  integrity.h  integrity_macros.h  lib.h  linux.h  linux_macros.h  logging.h  logging_macros.h  mag.h  mag_macros.h  metrics.h  navigation.h  navigation_macros.h  ndb.h  ndb_macros.h  observation.h  observation_macros.h  orientation.h  orientation_macros.h  (+42 more)
c/scripts/: clang-format.sh
c/src/: CMakeLists.txt  acquisition.c  bootload.c  edc.c  ext_events.c  file_io.c  flash.c  gnss.c  imu.c  integrity.c  libsbpConfig.cmake.in  linux.c  logging.c  mag.c  multipart_string.c  navigation.c  ndb.c  null_terminated_string.c  observation.c  orientation.c  piksi.c  profiling.c  sbas.c  sbp.c  sbp2json.c  sbp_msg.c  sequence_string.c  settings.c  signing.c  solution_meta.c  ssr.c  string.c  system.c  telemetry.c  tracking.c  unterminated_string.c  user.c  vehicle.c
c/src/new/: acquisition.c  bootload.c  ext_events.c  file_io.c  flash.c  gnss.c  imu.c  linux.c  logging.c  mag.c  navigation.c  ndb.c  observation.c  orientation.c  piksi.c  sbas.c  settings.c  solution_meta.c  ssr.c  system.c  tracking.c  user.c  vehicle.c
c/src/string/: double_null_terminated.c  multipart.c  null_terminated.c  sbp_string.c  unterminated.c
c/src/unpacked/: acquisition.c  bootload.c  ext_events.c  file_io.c  (+19 more)
c/test/: CMakeLists.txt  auto_check_sbp_acquisition_1.c  auto_check_sbp_acquisition_10.c  auto_check_sbp_acquisition_11.c  auto_check_sbp_acquisition_17.c  auto_check_sbp_acquisition_18.c  auto_check_sbp_acquisition_19.c  auto_check_sbp_acquisition_2.c  auto_check_sbp_acquisition_20.c  auto_check_sbp_acquisition_3.c  auto_check_sbp_acquisition_30.c  auto_check_sbp_acquisition_31.c  auto_check_sbp_acquisition_35.c  auto_check_sbp_acquisition_36.c  auto_check_sbp_acquisition_38.c  auto_check_sbp_acquisition_39.c  auto_check_sbp_acquisition_4.c  auto_check_sbp_acquisition_40.c  auto_check_sbp_acquisition_41.c  auto_check_sbp_acquisition_42.c  auto_check_sbp_acquisition_43.c  auto_check_sbp_acquisition_44.c  auto_check_sbp_acquisition_45.c  auto_check_sbp_acquisition_46.c  auto_check_sbp_acquisition_MsgAcqResult.c  auto_check_sbp_acquisition_MsgAcqResult.cc  auto_check_sbp_acquisition_MsgAcqResultDepA.c  auto_check_sbp_acquisition_MsgAcqResultDepA.cc  auto_check_sbp_acquisition_MsgAcqResultDepB.c  auto_check_sbp_acquisition_MsgAcqResultDepB.cc  auto_check_sbp_acquisition_MsgAcqResultDepC.c  auto_check_sbp_acquisition_MsgAcqResultDepC.cc  auto_check_sbp_acquisition_MsgAcqSvProfile.c  auto_check_sbp_acquisition_MsgAcqSvProfile.cc  auto_check_sbp_acquisition_MsgAcqSvProfileDep.c  auto_check_sbp_acquisition_MsgAcqSvProfileDep.cc  auto_check_sbp_bootload_14.c  auto_check_sbp_bootload_18.c  auto_check_sbp_bootload_19.c  auto_check_sbp_bootload_20.c  (+837 more)
c/test_package/: CMakeLists.txt  api.c  legacy.c  legacy.cc  v4.c  v4.cc
haskell/: .dir-locals.el  .ghci  .stylish-haskell.yaml  .weeder.yaml  Dockerfile  HLint.hs  README.md  Shakefile.hs  sbp.cabal  sbp.cabal.m4  shell.nix  stack-lts-10.yaml  stack-lts-11.yaml  stack-lts-5.yaml  stack-lts-6.yaml  stack-lts-8.yaml  stack-nightly.yaml  stack.yaml
haskell/bench/: Bench.hs
haskell/main/: JSON2JSON.hs  JSON2SBP.hs  SBP2JSON.hs  SBP2NMEA.hs  SBP2PRETTYJSON.hs  SBP2YAML.hs  SBPMux.hs
haskell/test/: Test.hs
proto/c/: CMakeLists.txt  acquisition.pb.c  acquisition.pb.h  bootload.pb.c  bootload.pb.h  ext_events.pb.c  ext_events.pb.h  file_io.pb.c  file_io.pb.h  flash.pb.c  flash.pb.h  generate_nanopb_bindings.sh  gnss.pb.c  gnss.pb.h  imu.pb.c  imu.pb.h  logging.pb.c  logging.pb.h  mag.pb.c  mag.pb.h  navigation.pb.c  navigation.pb.h  ndb.pb.c  ndb.pb.h  observation.pb.c  observation.pb.h  orientation.pb.c  orientation.pb.h  piksi.pb.c  piksi.pb.h  sbas.pb.c  sbas.pb.h  settings.pb.c  settings.pb.h  ssr.pb.c  ssr.pb.h  system.pb.c  system.pb.h  tracking.pb.c  tracking.pb.h  (+4 more)
rust/sbp/: BUILD.bazel  Cargo.toml  release-hook.sh  rustfmt.toml
rust/sbp2json/: BUILD.bazel  Cargo.toml  README.md  build.rs  release-hook.sh
tools/compile_commands/: BUILD.bazel
tools/lint/: BUILD.bazel  linters.bzl
(+6306 files in other folders)
