module(
    name = "libsbp",
    version = "0.1.0",
)

bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "platforms", version = "1.1.0")
bazel_dep(name = "rules_swiftnav", version = "0.20.0")
git_override(
    module_name = "rules_swiftnav",
    commit = "d53aabb7388ab08bc059ed44602b38c0bed8e6aa",
    remote = "https://github.com/swift-nav/rules_swiftnav.git",
)

bazel_dep(name = "aspect_rules_lint", version = "2.6.0", dev_dependency = True)

# Force a Bazel 9 compatible rules_go. It is pulled in transitively (dev-only)
# via aspect_rules_lint -> rules_buf; the version that chain selects (0.42.0)
# uses CcInfo, which Bazel 9 removed. >=0.59.0 has the fix.
bazel_dep(name = "rules_go", version = "0.61.1", dev_dependency = True)

swift_cc_toolchain_ext = use_extension("@rules_swiftnav//cc:extensions.bzl", "swift_cc_toolchain_extension")
use_repo(
    swift_cc_toolchain_ext,
    "aarch64-darwin-llvm20",
    "aarch64-linux-llvm20",
    "aarch64-sysroot",
    "x86_64-darwin-llvm20",
    "x86_64-linux-llvm20",
    "x86_64-sysroot",
)

register_toolchains(
    "@rules_swiftnav//cc/toolchains/llvm20/aarch64-darwin:cc-toolchain-aarch64-darwin",
    "@rules_swiftnav//cc/toolchains/llvm20/x86_64-linux:cc-toolchain-x86_64-linux",
    "@rules_swiftnav//cc/toolchains/llvm20/aarch64-linux:cc-toolchain-aarch64-linux",
    "@rules_swiftnav//cc/toolchains/llvm20/x86_64-darwin:cc-toolchain-x86_64-darwin",
)

# Rust toolchain platforms 1.1.0 is declared above.
bazel_dep(name = "rules_rs", version = "0.0.92")
bazel_dep(name = "llvm", version = "0.8.3")

# Make @rules_rust available for the rules rules_rs does NOT wrap
# (rust_clippy / rust_doc / rust_doc_test / rustfmt_test / rust_test_suite + aspects).
rules_rust = use_extension("@rules_rs//rs:rules_rust.bzl", "rules_rust")
use_repo(rules_rust, "rules_rust")

# Toolchain — preserve the repo's edition (2024) and stable pin (1.91.1).
toolchains = use_extension("@rules_rs//rs/toolchains:module_extension.bzl", "toolchains")
toolchains.toolchain(
    edition = "2024",
    version = "1.96.0",
)
use_repo(toolchains, "default_rust_toolchains")

register_toolchains(
    "@default_rust_toolchains//:all",
    "@llvm//toolchain:all",
)

# Dependencies — dev-gated own hub. The crate usage is marked dev_dependency, so
# it is honored only when libsbp is the ROOT module (standalone build), where it
# creates libsbp's own complete "crates" hub. When libsbp is a DEPENDENCY (e.g. of
# gnss-converters), the entire usage is ignored, so it does not create a second
# "crates" hub that would collide with the owner's on the shared registry repo.
# libsbp's Rust is not compiled by such parents (they vendor sbp themselves), so it
# needs no hub there. Keep the hub named "crates" so @crates//:foo labels are
# unchanged. (A parent that DID compile libsbp's Rust would instead use crate.use_hub
# to share the owner's hub — not needed today.)
crate = use_extension("@rules_rs//rs:extensions.bzl", "crate", dev_dependency = True)
crate.from_cargo(
    name = "crates",
    cargo_toml = "//:Cargo.toml",
    cargo_lock = "//:Cargo.lock",
    platform_triples = [
        "x86_64-unknown-linux-gnu",
        "aarch64-unknown-linux-gnu",
        "x86_64-apple-darwin",
        "aarch64-apple-darwin",
    ],
)
use_repo(crate, "crates")

bazel_dep(name = "lcov", version = "2.3.2", dev_dependency = True)
bazel_dep(name = "googletest", version = "1.17.0.bcr.2", dev_dependency = True)
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    commit = "84b1fd42b09ec026eb69d54b25a447a3b0d7d80f",
    remote = "https://github.com/swift-nav/bazel-compile-commands-extractor.git",
)
