name:                  sbp
version:               0.50.5
synopsis:              SwiftNav's SBP Library
homepage:              https://github.com/swift-nav/libsbp
license:               LGPL-3
author:                Swift Navigation Inc.
maintainer:            Mark Fine <dev@swiftnav.com>
copyright:             Copyright (C) 2015 Swift Navigation, Inc.
category:              Network
build-type:            Simple
cabal-version:         >= 1.10
extra-source-files:    README.md
description:
  Haskell bindings for Swift Navigation Binary Protocol (SBP), a fast,
  simple, and minimal binary protocol for communicating with Swift
  devices. It is the native binary protocol used by the Piksi GPS
  receiver to transmit solutions, observations, status and debugging
  messages, as well as receive messages from the host operating
  system, such as differential corrections and the almanac.

source-repository head
  type:                git
  location:            git@github.com:swift-nav/libsbp.git

library
  exposed-modules:     SwiftNav.CRC16
                     , SwiftNav.SBP
                     , SwiftNav.SBP.Acquisition
                     , SwiftNav.SBP.Bootload
                     , SwiftNav.SBP.ExtEvents
                     , SwiftNav.SBP.FileIo
                     , SwiftNav.SBP.Flash
                     , SwiftNav.SBP.Logging
                     , SwiftNav.SBP.Navigation
                     , SwiftNav.SBP.Observation
                     , SwiftNav.SBP.Piksi
                     , SwiftNav.SBP.Settings
                     , SwiftNav.SBP.System
                     , SwiftNav.SBP.Tracking
                     , SwiftNav.SBP.Encoding
  default-language:    Haskell2010
  hs-source-dirs:      src
  ghc-options:         -Wall -fno-warn-unused-imports -fno-warn-orphans
  build-depends:       aeson
                     , array
                     , base >= 4.7 && < 5
                     , base64-bytestring
                     , basic-prelude
                     , binary
                     , bytestring
                     , data-binary-ieee754
                     , monad-loops
                     , text
  default-extensions:  RecordWildCards
                       TemplateHaskell
                       NoImplicitPrelude

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Test.hs
  other-modules:       Test.SwiftNav.CRC16
                     , Test.SwiftNav.SBP.Acquisition
                     , Test.SwiftNav.SBP.Bootload
                     , Test.SwiftNav.SBP.Encoding
                     , Test.SwiftNav.SBP.ExtEvents
                     , Test.SwiftNav.SBP.Logging
                     , Test.SwiftNav.SBP.Navigation
                     , Test.SwiftNav.SBP.Observation
                     , Test.SwiftNav.SBP.Piksi
                     , Test.SwiftNav.SBP.System
                     , Test.SwiftNav.SBP.Table
                     , Test.SwiftNav.SBP.Tracking
                     , Test.SwiftNav.SBP.Utils
  build-depends:       aeson
                     , base
                     , basic-prelude
                     , bytestring
                     , QuickCheck
                     , sbp
                     , tasty
                     , tasty-hunit
                     , tasty-quickcheck
                     , yaml-light
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                       OverloadedStrings